Fixing visible, readonly, required and enabled property - JSON would always return the same state irrespective of edit mode - all data attributes of these properties were incorrect when page source is inspected, fixed the same - we still load runtime client libraries on edit mode due to backward compatibility @review @vdua DOD(Yes)

--- a/ui.af.apps/src/main/content/jcr_root/apps/core/fd/components/form/container/v2/container/clientlibs/site/css/formcontainerview.css
+++ b/ui.af.apps/src/main/content/jcr_root/apps/core/fd/components/form/container/v2/container/clientlibs/site/css/formcontainerview.css
@@ -14,7 +14,7 @@
  * limitations under the License.
  ******************************************************************************/
 
-[data-cmp-visible="false"] {
+form:not(.cmp-adaptiveform-container--edit) [data-cmp-visible="false"] {
     display: none !important;
 }
 .cmp-adaptiveform-container--loading{
